--- a/blog/templates/showing_data_collection.html
+++ b/blog/templates/showing_data_collection.html
@@ -43,7 +43,7 @@
                     <th  data-field="Sample ID" class="h5" data-sortable="true" data-filter-control="input">  Sample ID <button id="sort_arrows" style=" border:none; float: right;"> <span> &#8645;</span> </button> </th>
                     <th  data-field="Composition" class="h5" data-sortable="true" data-filter-control="input">  Composition <button id="sort_arrows" style=" border:none; float: right;"> <span> &#8645;</span> </button> </th>
                     <th  data-field="Comments" class="h5" data-sortable="true" data-filter-control="input">  Comments <button id="sort_arrows" style=" border:none; float: right;"> <span> &#8645;</span> </button> </th>
-                    <th  data-field="data-added" class="h5" data-sortable="true" >  File <button id="sort_arrows" style=" border:none; float: right;"> <span> &#8645;</span> </button> </th>
+                    <th  data-field="data-added" class="h5" data-sortable="true" data-filter-control="input" >  File <button id="sort_arrows" style=" border:none; float: right;"> <span> &#8645;</span> </button> </th>
                     </tr>
 
                 </thead> 
