--- a/blog/templates/txt_table.html
+++ b/blog/templates/txt_table.html
@@ -30,7 +30,7 @@
                     <tr id='tableHeader'>
                     <th  data-field="Name" class="h5" data-sortable="true" data-filter-control="input"> Name <button id="sort_arrows" style=" border:none; float: right;"> <span> &#8645;</span> </button> </th>
                     <th  data-field="Material Name" class="h5" data-sortable="true" data-filter-control="input">  Material Name <button id="sort_arrows" style=" border:none; float: right;"> <span> &#8645;</span> </button> </th>
-                    <th  data-field="TXT File" class="h5" data-sortable="true" >  TXT File <button id="sort_arrows" style=" border:none; float: right;"> <span> &#8645;</span> </button> </th>
+                    <th  data-field="TXT File" class="h5" data-sortable="true" data-filter-control="input" >  TXT File <button id="sort_arrows" style=" border:none; float: right;"> <span> &#8645;</span> </button> </th>
                     </tr>
 
                 </thead> 
