--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -53,7 +53,7 @@
 
           <li class="nav-item dropdown active" id = "LOGIN/LOGOUT">
             <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle"
-            data-bs-toggle="dropdown" href="/" id="navbarDropdown" role="button">LOGIN/LOGOUT</a>
+            data-bs-toggle="dropdown" href="/" id="navbarDropdown" role="button">SIGN IN</a>
 
             <div aria-labelledby="navbarDropdown" class="dropdown-menu">
               <a class="dropdown-item" href="{% url 'blog:customer-log-in' %}"> LOGIN</a> 
@@ -64,7 +64,7 @@
 
           {% if request.user.customer %}
           <li class="nav-item active">
-            <a class="nav-link" href="">Welcome {{request.user.customer.full_name}}<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="">Welcome {{request.user.username}}<span class="sr-only">(current)</span></a>
           </li>
           {% else %}
           <li class="nav-item active">
@@ -73,10 +73,10 @@
           {% endif %}
         </ul>
 
-        <form class="form-inline">
+        <!-- <form class="form-inline">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        </form> -->
       </div>
     </div>
   </nav>
