--- a/blog/templates/showing_data_collection.html
+++ b/blog/templates/showing_data_collection.html
@@ -29,7 +29,7 @@
         } 
         </style> 
         </div> 
-
+<!-- 
     <table 
     id="table"
     data-toggle="table"
@@ -48,7 +48,7 @@
 
                 </thead> 
       <tbody>
-                <!---Table goes here-->
+           Table goes here
                 {% for p in instru_list%}
 
                 <tr>
@@ -61,12 +61,44 @@
                 </tr>
                   {% endfor %}
                 </tbody>
+    </table> -->
+
+    <table class="table table-hover">
+      <thead class="table-active">
+        <tr>
+          <th scope="col"> Instruments - Datatype </th>
+          <th scope="col"> Operator </th>
+          <th scope="col"> Sample ID </th>
+          <th scope="col"> Composition </th>
+          <th scope="col"> Comments </th>
+          <th scope="col"> File </th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for p in instru_list%}
+
+        <tr>
+        <td>{{p.instru_datatype}}</td>
+        <td>{{p.operator}}</td>
+        <td>{{p.sample_id}}</td>
+        <td>{{p.composition}}</td>
+        <td>{{p.comments}}</td>
+        <td> <a href="{{p.upload_data.url}}" download>{{p.upload_data}}</a></td>
+        </tr>
+          {% endfor %}
+      </tbody>
     </table>
+
+
+
+
+
+<!-- 
     <script>
   $(function() {
     $('#table').bootstrapTable()
   })
-</script>
+</script> -->
 
     <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
