--- a/blog/templates/materialslist.html
+++ b/blog/templates/materialslist.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.18.3/dist/bootstrap-table.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
   <body>
     {% include 'navbar.html' %}
@@ -29,21 +31,21 @@
         }
         </style>
         </div>
+        <input class="form-control" id="myInput" type="text" placeholder="Search.."><br>
 
     <table 
     id="table"
     data-toggle="table"
     data-filter-control="true"
-    data-show-search-clear-button="true"
     >
                       <thead class="thead-dark">
                     <tr id='tableHeader'>
-                    <th  data-field="material" class="h5" data-sortable="true" data-filter-control="input" > Material <button id="sort_arrows" style=" border:none; float: right;"> <span> &#8645;</span> </button> </th>
-                    <th  data-field="source-of-data" class="h5" data-sortable="true" data-filter-control="input">  Source of Data <button id="sort_arrows" style=" border:none; float: right;"> <span> &#8645;</span> </button> </th>
-                    <th  data-field="data-added" class="h5" data-sortable="true" data-filter-control="select">  Date Added <button id="sort_arrows" style=" border:none; float: right;"> <span> &#8645;</span> </button> </th>
+                    <th  data-field="material" class="h5" data-sortable="true" > Material </th>
+                    <th  data-field="source-of-data" class="h5" data-sortable="true">  Source of Data </th>
+                    <th  data-field="data-added" class="h5" data-sortable="true">  Date Added </th>
                     </tr>
                 </thead>
-      <tbody>
+      <tbody id="myTable">
                 <!---Table goes here-->
                 {% for i in material_list %}
 
@@ -57,10 +59,15 @@
                 </tbody>
     </table>
     <script>
-  $(function() {
-    $('#table').bootstrapTable()
-  })
-</script>
+      $(document).ready(function(){
+        $("#myInput").on("keyup", function() {
+          var value = $(this).val().toLowerCase();
+          $("#myTable tr").filter(function() {
+            $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+          });
+        });
+      });
+      </script>
     <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
