--- a/blog/templates/showing_data_collection.html
+++ b/blog/templates/showing_data_collection.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.18.3/dist/bootstrap-table.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
   <body>
     {% include 'navbar.html' %}
@@ -29,24 +31,16 @@
         } 
         </style> 
         </div> 
-<!-- filter search bar -->
-        <script>
-          $(document).ready(function(){
-            $("#myInput").on("keyup", function() {
-              var value = $(this).val().toLowerCase();
-              $("#myTable tr").filter(function() {
-                $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-              });
-            });
-          });
-          </script>
-
+        
+        <input class="form-control" id="myInput" type="text" placeholder="Search.."><br>
+        
+      
     <table 
     id="table"
     data-toggle="table"
-    data-filter-control="true"
+    data-filter-control="true" 
     >
-                <thead class="thead-light"> 
+                <thead class="thead-dark"> 
                     <tr id='tableHeader'>
                     <th  data-field="Instruments - Datatype" class="h5" data-sortable="true" > Instruments - Datatype </th>
                     <th  data-field="Operator" class="h5" data-sortable="true" > Operator </th>
@@ -57,7 +51,7 @@
                     </tr>
 
                 </thead> 
-      <tbody>
+      <tbody id="myTable">
                 {% for p in instru_list%}
 
                 <tr>
@@ -71,6 +65,18 @@
                   {% endfor %}
                 </tbody>
     </table> 
+    <script>
+      $(document).ready(function(){
+        $("#myInput").on("keyup", function() {
+          var value = $(this).val().toLowerCase();
+          $("#myTable tr").filter(function() {
+            $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+          });
+        });
+      });
+      </script>
+     
+
 <!-- 
     <table class="table table-hover" id="center">
       <thead class="table-active">
