--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -21,7 +21,7 @@
     <div class = "home_body_div container">
       
       
-      <p> {{ipAddressDict}} </p>
+      <!-- <p> {{ipAddressDict}} </p> -->
 
       <div class ="row pt-3">
         <button type="button" class="btn btn-outline-info btn-lg btn-block">
@@ -52,6 +52,8 @@
       </div> -->
 
     </div>
+
+    <!-- <a href="{% url 'blog:customer-log-in' %}"><h3>Sign In</h3></a> -->
 
 
   </body>
