--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -33,7 +33,7 @@
       <div class="row pt-3">
           <!--specify url fragment where hyperlink links to-->
           <button type="button" class="btn btn-outline-info btn-lg btn-block">
-            <a href="{% url 'blog:show-data-collection' %}" style="color: inherit;"> Instrument All Instrument Data </a>
+            <a href="{% url 'blog:show-data-collection' %}" style="color: inherit;"> All Instrument Data </a>
           </button>
       </div>
 
