--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
   <title>
   </title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!---^^link to bootstrap stylesheet-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <!---^^link to bootstrap stylesheet-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+    integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -18,19 +22,21 @@
       <!-- <a class="navbar-brand js-scroll" href="/"><img alt="" class=
       "d-inline-block align-middle mr-2" src="/static/images/popcornDataLogo.png" width="45">
       <span style="color: #7dab97;">PopcornData</span></a>  -->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="navbar-collapse collapse justify-content-between" id="navbarDefault">
         <ul class="navbar-nav">
-          
+
           <li class="nav-item active">
             <a class="nav-link" href="{% url 'blog:home' %}">HOME <span class="sr-only">(current)</span></a>
           </li>
-          
+
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'blog:upload-global-data' %}">GLOBAL DATA <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{% url 'blog:upload-global-data' %}">GLOBAL DATA <span
+                class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="{% url 'blog:about' %}"> ABOUT <span class="sr-only">(current)</span></a>
@@ -38,9 +44,9 @@
 
 
           {% if request.user.customer %}
-          <li class="nav-item dropdown active" id = "private_menu">
-            <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle"
-            data-bs-toggle="dropdown" href="" id="navbarDropdown" role="button">UPLOAD DATA FORMS</a>
+          <li class="nav-item dropdown active" id="private_menu">
+            <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
+              href="" id="navbarDropdown" role="button">UPLOAD DATA FORMS</a>
 
             <div aria-labelledby="navbarDropdown" class="dropdown-menu">
               <a class="dropdown-item" href="{% url 'blog:data-collection' %}"> ADD SELF-COLLECTED INSTRUMENT DATA </a>
@@ -51,12 +57,12 @@
           {% endif %}
 
 
-          <li class="nav-item dropdown active" id = "LOGIN/LOGOUT">
-            <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle"
-            data-bs-toggle="dropdown" href="/" id="navbarDropdown" role="button">SIGN IN</a>
+          <li class="nav-item dropdown active" id="LOGIN/LOGOUT">
+            <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
+              href="/" id="navbarDropdown" role="button">SIGN IN</a>
 
             <div aria-labelledby="navbarDropdown" class="dropdown-menu">
-              <a class="dropdown-item" href="{% url 'blog:customer-log-in' %}"> LOGIN</a> 
+              <a class="dropdown-item" href="{% url 'blog:customer-log-in' %}"> LOGIN</a>
               <a class="dropdown-item" href="{% url 'blog:customer-registration' %}"> SIGN UP </a>
               <a class="dropdown-item" href="{% url 'blog:customerlogout' %}"> LOGOUT </a>
             </div>
@@ -64,7 +70,7 @@
 
           {% if request.user.customer %}
           <li class="nav-item active">
-            <a class="nav-link" href="">Welcome {{request.user.username}}<span class="sr-only">(current)</span></a>
+            <a class="nav-link">Welcome {{request.user.username}}<span class="sr-only">(current)</span></a>
           </li>
           {% else %}
           <li class="nav-item active">
@@ -82,91 +88,96 @@
   </nav>
 
   <div class="p-3 mb-2 bg-secondary text-white">
-    <h3 style="text-align: center;" class = "font-weight-normal"> Collective Actalab Material Properties Site </h3>
+    <h3 style="text-align: center;" class="font-weight-normal"> Collective Actalab Material Properties Site </h3>
   </div>
 
   <style>
     * {
-  margin: 0;
-  padding: 0;
-}
-/*This line removes the white space between the div elements*/
+      margin: 0;
+      padding: 0;
+    }
 
-.navbar {
-  background-color: #cdebf2;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-.title_class {
-  background-color: #5e6c76;
-  display: float;
-}
-.title {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  width: 100%;
-  padding-top: 10pt;
-  padding-bottom: 10pt;
-  /*padding changes spacing within the div*/
-  font-size: 25pt;
-  text-align: center;
-  color: white;
-}
+    /*This line removes the white space between the div elements*/
 
-#description {
-  margin: 2%;
-  /*margin changes spacing outside the div*/
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 100;
-  font-size: 16pt;
+    .navbar {
+      background-color: #cdebf2;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    }
 
-  text-align: center;
-  font-style: italic;
-}
+    .title_class {
+      background-color: #5e6c76;
+      display: float;
+    }
 
-/* .mat_list_div
+    .title {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      width: 100%;
+      padding-top: 10pt;
+      padding-bottom: 10pt;
+      /*padding changes spacing within the div*/
+      font-size: 25pt;
+      text-align: center;
+      color: white;
+    }
+
+    #description {
+      margin: 2%;
+      /*margin changes spacing outside the div*/
+      font-family: Arial, Helvetica, sans-serif;
+      font-weight: 100;
+      font-size: 16pt;
+
+      text-align: center;
+      font-style: italic;
+    }
+
+    /* .mat_list_div
 {
     display: inline-block;
     background-color: #EBE8E8;
 } */
-#Materials {
-  font-family: sans-serif;
-  padding-top: 10pt;
-  font-weight: bolder;
-  font-size: 16pt;
-  color: #21457c;
-}
-.search_class {
-  background-color: white;
-  color: gray;
-  padding-left: 10pt;
-}
-.add_class {
-  display: inline-block;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bolder;
-  color: white;
-  text-transform: uppercase;
-  text-align: center;
-}
+    #Materials {
+      font-family: sans-serif;
+      padding-top: 10pt;
+      font-weight: bolder;
+      font-size: 16pt;
+      color: #21457c;
+    }
 
-#add_excel {
-  background-color: #4a81a3;
-  padding: 10pt;
-}
+    .search_class {
+      background-color: white;
+      color: gray;
+      padding-left: 10pt;
+    }
 
-#add_logger {
-  background-color: #4a81a3;
-  padding: 10pt;
-}
+    .add_class {
+      display: inline-block;
+      font-family: Arial, Helvetica, sans-serif;
+      font-weight: bolder;
+      color: white;
+      text-transform: uppercase;
+      text-align: center;
+    }
 
-.data_list_class {
-  color: #21457c;
-}
+    #add_excel {
+      background-color: #4a81a3;
+      padding: 10pt;
+    }
 
-.list-group {
-  font-size: larger;
-}
+    #add_logger {
+      background-color: #4a81a3;
+      padding: 10pt;
+    }
 
+    .data_list_class {
+      color: #21457c;
+    }
+
+    .list-group {
+      font-size: larger;
+    }
   </style>
-  
+
 </body>
+
 </html>
