--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -32,7 +32,7 @@
                         <li style="color: red;">{{error}}</li>
                         {% endif %}
                     </div>
-                    <div class="bottom text-center mb-5">
+                    <div href="{% url 'blog:customer-registration' %}" class="bottom text-center mb-5">
                         <p class="sm-text mx-auto mb-3">Don't have an account?<button class="btn btn-white ml-2">Sign
                                 Up</button></p>
                     </div>
